Fixing the styling issues on mobile screens

--- a/src/components/404/404.css
+++ b/src/components/404/404.css
@@ -14,6 +14,12 @@ html.not-found-page,
     height: 100%;
 }
 
+@media (max-width: 600px) {
+    .not-found-page .container {
+        height: auto;
+    }
+}
+
 .not-found-page .row {
     flex-direction: column;
 }
